# MECE-Capstone-2025-cudaPRM

./: .gitignore  LICENSE  Makefile  README.md  cuPRM.py  example_usage.py  inf_test.py  inference.py  inference2.py  integration.py  isaac_vis.py  main  multiobject_demo_path.csv  prm.py  requirements.txt  setup.py  setup_robust.py  stategen  test.py  test_scene.py  test_scene_oop.py  test_trajectory.csv  testing.py  visPRM.py
csvs/: posesImproved.csv  times_7_100000_ms.csv  times_7_100_ms.csv  times_all_visuals.xlsx
fk/: fk.py
src/: BADknn.cu  CMakeLists.txt  a.out  hyperparameters.cuh  knn.cu  knncuda.cu  main  main.cu  my_knn2.cu  plan  plan.cu  plotNN.py  pprm  pprm.cu  python_bindings.cpp  python_bindings.h  roadmap.txt  roadmapN400K10.txt  stategen.cu  test_bindings.py  times_10000_states_5_K.txt  times_1000_states_5_K.txt  times_20000_states_10_K.txt  times_2000_states_10_K.txt  times_5000_states_10_K.txt  timing.cu  vis.py
src/archived/: ignore.xlsx  knn.cu
src/bindings/: py_bind.cpp  py_bind.h  pybindings.cpp
src/collision/: cc_2D.cu  cc_2D.cuh  env_2D.cu  env_2D.cuh  params.cuh
src/params/: hyperparameters.cu  hyperparameters.cuh
src/planning/: construction.cu  construction.cuh  hyperparameters.cuh  knn.cu  pprm.cu  pprm.cuh  stategen.cu
src/timing_results/: times_10000_states_10_K.txt  vis.py
src/timing_results_env2/: times_10000_states_5_K.txt  times_1000_states_5_K.txt  times_20000_states_20_K.txt  times_20000_states_5_K.txt  times_5000_states_10_K.txt
src/visualization_and_timing/: vis.py
src/visualization_and_timing/timing_results/: times_10000_states_20_K.txt  times_20000_states_5_K.txt  times_5000_states_20_K.txt  vis.py
src/visualization_and_timing/timing_results_env2/: times_10000_states_10_K.txt
(+291 files in other folders)
